--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Movie Posters</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@100;400&display=swap" rel="stylesheet"> 
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
