Changed color theme

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Posters</title>
+    <script src="https://kit.fontawesome.com/38e1bf458f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@100;400&display=swap" rel="stylesheet"> 
@@ -16,9 +17,9 @@
 <body>
     <main>
         <div class="wrapper">
-            <h1>Movie Posters</h1>
+            <h1>Movie Posters <span><i class="fas fa-film"></i></span></h1>
             <div class="search-field">
-                <input type="text" id="search-text" placeholder="Search for movie poster...">
+                <input type="text" id="search-text" placeholder="Search for a movie poster...">
                 <button id="button">Search</button>
             </div>
         </div>
