Added keyup event on input

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@100;400&display=swap" rel="stylesheet"> 
-    <script src="src/ts/main.ts"></script>
+    <script src="src/ts/main.ts" type="module"></script>
     <link rel="stylesheet" href="src/scss/main.scss">
 </head>
 
