Fixes to wrapper and headings

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <main>
         <div class="wrapper">
             <h1>Movie Posters <span><i class="fas fa-film"></i></span></h1>
+            <p>Find posters for your favorite movies.</p>
             <div class="search-field">
                 <input type="text" id="search-text" placeholder="Search for a movie poster...">
                 <button id="button">Search</button>
