Added background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <button id="button">Search</button>
             </div>
         </div>
-        <div id="result"></div>
+        <div id="result">
+          
+        </div>
 
     </main>
 </body>
