--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Posters</title>
+    <title>CinePosters</title>
     <script src="https://kit.fontawesome.com/38e1bf458f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +17,7 @@
 <body>
     <main>
         <div class="wrapper">
-            <h1>Movie Posters <span><i class="fas fa-film"></i></span></h1>
-            <p>Find posters for your favorite movies.</p>
+            <h1>CinePosters<span><i class="fas fa-film"></i></span></h1>
             <div class="search-field">
                 <input type="text" id="search-text" placeholder="Search for a movie poster...">
                 <button id="button">Search</button>
