--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <div id="result">
           
         </div>
-
+<footer>
+    <p>© Malin Nilsson 2022</p>
+    <p>View the project on <a href="https://github.com/malin-nilsson/CinePosters">Github</a></p>
+</footer>
     </main>
 </body>
 
